# brscan

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
build-arm/: libbrcolm.so.1  libbrscandec.so.1  test_cri  test_full  test_integration
libbrcolm/: brcolm.c
libbrscandec/: brother_bugchk.c  brother_chreso.c  brother_chreso.h  brother_scandec.c  brother_scandec.h
libsane-brother/: brother.c  brother_brscan4.c  brother_brscan4.h  brother_bugchk.c  brother_color.c  brother_color.h  brother_devaccs.c  brother_devinfo.c  brother_log.c  brother_modelinf.c  brother_modelinf.h  brother_scanner.c  stubs.c
scripts/: build-release.sh
tests/: diag_brcolm.c  diag_brcolm2.c  test_changeresinit.c  test_color_jpeg.c  test_integration.c  test_scandec_arm32_sim.c  test_scandec_arm_mock.c  test_scandec_mini.c  verify_brcolm.c  verify_brscandec.c
tests/eop_hang/: harness.c  run.sh  usb_stub.c
tests/unit/: test_brscan4_color_reference.cpp  test_brscan4_reference.cpp
